--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Bootcamp</title>
-
-    <!-- Load React -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <title>Books</title>
 
     <!-- 
       Load Babel
@@ -26,13 +22,14 @@
     />
 
     <!-- local CSS/JS -->
-    <link rel="stylesheet" href="books.css" />
-    <script type="module" src="main.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <div id="root"></div>
-
+    <!-- Load React -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <!-- Load our react component. -->
     <script src="books.js" defer type="text/babel"></script>
     <script src="index.js" defer type="text/babel"></script>
